# MakaMIDI

./: .gitignore  CMakeLists.txt  LICENSE  Midi makam notation - Rast.csv  MidiEffect.jucer  README.md  Saba.csv  setup_env.bat
Builds/VisualStudio2019/x64/Debug/VST3/: CodeAnalysisResultManifest.txt  MidiEffect.exp  MidiEffect.lib  MidiEffect_VST3.vcxproj.FileListAbsolute.txt  include_juce_audio_plugin_client_VST3.nativecodeanalysis.sarif  include_juce_audio_plugin_client_VST3.nativecodeanalysis.xml  resources.res
Builds/VisualStudio2019/x64/Debug/VST3/MidiEffect_VST3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MidiEffect_VST3.lastbuildstate  MidiEffect_VST3.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
MakamData/: Midi makam notation - Hicaz Humayun.csv  Midi makam notation - Hicaz Uzzal.csv  Midi makam notation - Hicaz Zirgule.csv  Midi makam notation - Hicaz.csv  Midi makam notation - Huseyni.csv  Midi makam notation - Kurdi.csv  Midi makam notation - Nikriz.csv  Midi makam notation - Segah.csv  Midi makam notation - Ussak.csv  Rast.csv  Test.csv
Source/: LowBox.h  MidiProcessor.h  NoteAlteration.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
